change main.css for building

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
 @import "tailwindcss";
+@import "./sections/sidebar.css";
 
 @layer base {
     @import "./reset.css";
@@ -6,5 +8,4 @@
     @import "./grid.css";
 }
 
-/* Стылі секцый імпартуем ніжэй */
-@import "./sections/sidebar.css";
+
