fix(header): fix language dropdown toggle on mobile devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,7 @@
 @import "tailwindcss";
 @import "./sections/sidebar.css";
 @import "./sections/hero.css";
+@import "./sections/header.css";
 
 @layer base {
     @import "./reset.css";
