--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,6 @@
             </div>
 
             <div class="relative dropdown-lang inline-block">
-
                 <button id="lang-btn"
                     class="flex items-center gap-2 text-[12px] font-black text-white uppercase tracking-widest cursor-pointer py-1">
                     <span class="text-red-600">BE</span>
@@ -40,7 +39,7 @@
             </div>
         </a>
 
-        <nav class="hidden md:flex items-center space-x-10 uppercase text-[13px] font-black tracking-widest text-white">
+        <nav class="hidden xl:flex items-center space-x-10 uppercase text-[13px] font-black tracking-widest text-white">
             <a href="#projects" class="hover:text-red-600 transition-colors">Праекты</a>
             <a href="#contacts" class="hover:text-red-600 transition-colors">Кантакты</a>
             <a href="#"
@@ -51,7 +50,7 @@
             </button>
         </nav>
 
-        <button id="mobile-menu-btn" class="md:hidden text-white cursor-pointer">
+        <button id="mobile-menu-btn" class="xl:hidden text-white cursor-pointer">
             <i class="fa-solid fa-bars text-3xl"></i>
         </button>
     </div>
