feat: add i18n support and translations for BE, UA, RU, EN

--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -9,27 +9,34 @@
     </div>
 
     <div class="xl:hidden px-6 pt-4 pb-6 mb-4 border border-red-600/50 mx-4 flex flex-col space-y-4 text-center">
-        <a href="#projects"
+        <a href="#projects" data-i18n="nav.projects"
             class="text-white uppercase font-black tracking-widest text-[13px] hover:text-red-600 transition-colors">Праекты</a>
-        <a href="#contacts"
+        <a href="#contacts" data-i18n="nav.contacts"
             class="text-white uppercase font-black tracking-widest text-[13px] hover:text-red-600 transition-colors">Кантакты</a>
-        <a href="#"
+        <a href="#donate" data-i18n="nav.donate"
             class="bg-red-600 text-white py-3 uppercase font-black tracking-widest text-[11px] hover:bg-white hover:text-black transition-all">Падтрымаць</a>
     </div>
 
     <nav
         class="flex flex-col space-y-6 text-white uppercase font-black tracking-widest text-[13px] text-center items-center">
-        <a href="#" class="hover:text-red-600 transition-colors duration-200 text-gray-400">Пра фонд</a>
-        <a href="#" class="hover:text-red-600 transition-colors duration-200 text-gray-400">Матэрыялы</a>
-        <a href="#" class="hover:text-red-600 transition-colors duration-200 text-gray-400">Дабраахвотнікам</a>
-        <a href="#" class="hover:text-red-600 transition-colors duration-200 text-gray-400">Партнёры</a>
-        <a href="#" class="hover:text-red-600 transition-colors duration-200 text-gray-400">Дапамога</a>
-        <a href="#" class="hover:text-red-600 transition-colors duration-200 text-gray-400">Гісторыя</a>
+        <a href="#about" data-i18n="nav.about"
+            class="hover:text-red-600 transition-colors duration-200 text-gray-400">Пра фонд</a>
+        <a href="#materials" data-i18n="nav.materials"
+            class="hover:text-red-600 transition-colors duration-200 text-gray-400">Матэрыялы</a>
+        <a href="#volunteers" data-i18n="nav.volunteers"
+            class="hover:text-red-600 transition-colors duration-200 text-gray-400">Дабраахвотнікам</a>
+        <a href="#partners" data-i18n="nav.partners"
+            class="hover:text-red-600 transition-colors duration-200 text-gray-400">Партнёры</a>
+        <a href="#services" data-i18n="nav.services"
+            class="hover:text-red-600 transition-colors duration-200 text-gray-400">Дапамога</a>
+        <a href="#history" data-i18n="nav.history"
+            class="hover:text-red-600 transition-colors duration-200 text-gray-400">Гісторыя</a>
     </nav>
 
     <div class="mt-auto p-8 border-t border-white/10 text-center">
         <div class="w-10 h-px bg-red-600 mx-auto mb-6"></div>
-        <p class="text-white text-[11px] uppercase font-black tracking-[0.2em] leading-relaxed italic">
+        <p data-i18n="sidebar.slogan"
+            class="text-white text-[11px] uppercase font-black tracking-[0.2em] leading-relaxed italic">
             Ваша надзейная абарона
         </p>
     </div>
