--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header id="main-header" class="fixed top-0 left-0 w-full bg-[#1a1a1a] z-50">
+<header id="main-header" class="fixed top-0 left-0 w-full bg-[#1a1a1a] transition-all duration-300 z-50">
     <div class="bg-black/40 border-b border-white/5 py-2">
         <div class="container-custom flex justify-end items-center gap-8">
             <div class="flex items-center gap-6 text-white text-xl">
@@ -8,32 +8,18 @@
                 <a href="#" class="hover:text-red-600 transition-colors"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#" class="hover:text-red-600 transition-colors"><i class="fa-brands fa-youtube"></i></a>
             </div>
-
             <div class="relative dropdown-lang inline-block">
                 <button id="lang-btn"
                     class="flex items-center gap-2 text-[12px] font-black text-white uppercase tracking-widest cursor-pointer py-1">
                     <span id="current-lang" class="text-red-600">BE</span>
                     <i class="fa-solid fa-chevron-down text-[10px] transition-transform"></i>
                 </button>
-
-                <div class="dropdown-content absolute right-0 top-full pt-2 z-60">
-                    <div class="bg-[#1a1a1a] border border-white/10 shadow-2xl flex flex-col min-w-15">
-                        <button data-lang="en"
-                            class="lang-switch px-4 py-2 text-[11px] font-black text-gray-400 hover:text-white hover:bg-white/5 transition-colors border-b border-white/5 text-left">EN</button>
-                        <button data-lang="ua"
-                            class="lang-switch px-4 py-2 text-[11px] font-black text-gray-400 hover:text-white hover:bg-white/5 transition-colors border-b border-white/5 text-left">UA</button>
-                        <button data-lang="be"
-                            class="lang-switch px-4 py-2 text-[11px] font-black text-gray-400 hover:text-white hover:bg-white/5 transition-colors border-b border-white/5 text-left">BE</button>
-                        <button data-lang="ru"
-                            class="lang-switch px-4 py-2 text-[11px] font-black text-gray-400 hover:text-white hover:bg-white/5 transition-colors text-left">RU</button>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
 
     <div class="container-custom flex items-center justify-between py-2">
-        <a href="/" class="flex items-center">
+        <a href="/" class="flex items-center shrink-0">
             <img src="/src/assets/img/logo.svg" alt="Logo" class="h-12 md:h-20 w-auto object-contain mr-4">
             <div class="flex flex-col text-white uppercase font-black leading-[0.85]">
                 <span class="text-lg md:text-xl tracking-tighter">Bulwark<br>fund</span>
@@ -41,19 +27,28 @@
             </div>
         </a>
 
-        <nav class="hidden xl:flex items-center space-x-10 uppercase text-[13px] font-black tracking-widest text-white">
-            <a href="#projects" data-i18n="nav.projects" class="hover:text-red-600 transition-colors">Праекты</a>
-            <a href="#contacts" data-i18n="nav.contacts" class="hover:text-red-600 transition-colors">Кантакты</a>
-            <a href="#donate" data-i18n="nav.donate"
-                class="bg-red-600 text-white px-8 py-2.5 hover:bg-white hover:text-black transition-all">Падтрымаць</a>
-            <button id="open-sidebar"
-                class="text-white hover:text-red-600 transition-colors flex items-center cursor-pointer">
+        <div class="flex items-center gap-8">
+            <nav
+                class="hidden xl:flex items-center space-x-10 uppercase text-[13px] font-black tracking-widest text-white">
+                <a href="#hero" id="home-link"
+                    class="text-white hover:text-red-600 transition-all duration-300 opacity-0 translate-x-5 pointer-events-none">
+                    <i class="fa-solid fa-house text-xl"></i>
+                </a>
+
+                <a href="#about" data-i18n="nav.about" class="hover:text-red-600 transition-colors">Пра фонд</a>
+                <a href="#contacts" data-i18n="nav.contacts" class="hover:text-red-600 transition-colors">Кантакты</a>
+                <a href="#donate" data-i18n="nav.donate"
+                    class="bg-red-600 text-white px-8 py-2.5 hover:bg-white hover:text-black transition-all">Падтрымаць</a>
+
+                <button id="open-sidebar"
+                    class="text-white hover:text-red-600 transition-colors flex items-center cursor-pointer ml-4">
+                    <i class="fa-solid fa-bars text-3xl"></i>
+                </button>
+            </nav>
+
+            <button id="mobile-menu-btn" class="xl:hidden text-white cursor-pointer">
                 <i class="fa-solid fa-bars text-3xl"></i>
             </button>
-        </nav>
-
-        <button id="mobile-menu-btn" class="xl:hidden text-white cursor-pointer">
-            <i class="fa-solid fa-bars text-3xl"></i>
-        </button>
+        </div>
     </div>
 </header>
