mod hero html lang keys

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -16,7 +16,7 @@
                     class="bg-red-600 text-white px-10 py-4 uppercase font-black tracking-widest text-sm hover:bg-white hover:text-black transition-all">
                     Атрымаць дапамогу
                 </a>
-                <a href="#donate" data-i18n="nav.donate"
+                <a href="#donate" data-i18n="nav.support"
                     class="bg-red-600 text-white px-10 py-4 uppercase font-black tracking-widest text-sm hover:bg-white hover:text-black transition-all cursor-pointer">
                     Падтрымаць
                 </a>
