--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,11 +2,25 @@
     <div class="bg-black/40 border-b border-white/5 py-2">
         <div class="container-custom flex justify-end items-center gap-8">
             <div class="flex items-center gap-6 text-white text-xl">
-                <a href="#" class="hover:text-red-600 transition-colors"><i class="fa-brands fa-telegram"></i></a>
-                <a href="#" class="hover:text-red-600 transition-colors"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="hover:text-red-600 transition-colors"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#" class="hover:text-red-600 transition-colors"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#" class="hover:text-red-600 transition-colors"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://t.me/bulwark_fund" target="_blank" rel="noopener noreferrer"
+                    class="hover:text-red-600 transition-colors">
+                    <i class="fa-brands fa-telegram"></i>
+                </a>
+
+                <a href="https://www.instagram.com/bulwark_fund" target="_blank" rel="noopener noreferrer"
+                    class="hover:text-red-600 transition-colors">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+
+                <a href="https://www.facebook.com/share/1CcAVYhTi9/" target="_blank" rel="noopener noreferrer"
+                    class="hover:text-red-600 transition-colors">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+
+                <a href="https://www.linkedin.com/in/%D0%B1%D0%BB%D0%B0%D0%B3%D0%BE%D0%B4%D1%96%D0%B9%D0%BD%D0%B8%D0%B9-%D1%84%D0%BE%D0%BD%D0%B4-bulwark-3097083a4/"
+                    target="_blank" rel="noopener noreferrer" class="hover:text-red-600 transition-colors">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
             </div>
             <div id="lang-dropdown" class="relative dropdown-lang inline-block">
                 <button id="lang-btn"
