--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -67,21 +67,21 @@
                                 class="fa-solid fa-chevron-down text-[8px] transition-transform group-hover:rotate-180"></i></a>
                         <div
                             class="absolute top-full left-0 w-64 bg-[#1a1a1a] border border-white/5 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 shadow-2xl">
-                            <a href="/pages/projects.html"
+                            <a href="/src/pages/projects.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Праекты</a>
                             <a href="/src/pages/history.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Гістарычны
                                 экскурс</a>
-                            <a href="/pages/reports.html"
+                            <a href="/src/pages/reports.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Справаздачы</a>
-                            <a href="/pages/materials.html"
+                            <a href="/src/pages/materials.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Матэрыялы</a>
-                            <a href="/pages/contacts.html" data-i18n="nav.contacts"
+                            <a href="/src/pages/contacts.html" data-i18n="nav.contacts"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Рэквізіты</a>
-                            <a href="/pages/zarok-vajara.html"
+                            <a href="/src/pages/zarok-vajara.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Зарок
                                 ваяра</a>
-                            <a href="/pages/gallery.html"
+                            <a href="/src/pages/gallery.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Галерэя</a>
                         </div>
                     </div>
