mode viteconfig and the ways in header and mobile menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -91,7 +91,7 @@
                                 class="fa-solid fa-chevron-down text-[8px] transition-transform group-hover:rotate-180"></i></a>
                         <div
                             class="absolute top-full left-0 w-64 bg-[#1a1a1a] border border-white/5 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200">
-                            <a href="/pages/full-partners.html"
+                            <a href="/src/pages/full-partners.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Нашы
                                 партнёры / Стаць
                                 партнёрам</a>
@@ -103,10 +103,10 @@
                                 class="fa-solid fa-chevron-down text-[8px] transition-transform group-hover:rotate-180"></i></a>
                         <div
                             class="absolute top-full left-0 w-64 bg-[#1a1a1a] border border-white/5 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200">
-                            <a href="/pages/get-help.html"
+                            <a href="/src/pages/get-help.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Атрымаць
                                 дапамогу</a>
-                            <a href="/pages/donate.html"
+                            <a href="/src/pages/donate.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Дапамагчы</a>
                         </div>
                     </div>
