correct navigation, add script for navigate from pages to index

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -74,36 +74,35 @@
                 <h4 data-i18n="nav.title" class="text-white font-black uppercase text-[11px] tracking-[0.2em]">
                     Навігацыя
                 </h4>
-                <div class="grid grid-cols-2 gap-4">
-                    <ul class="space-y-3 text-sm">
-                        <li><a href="#about" class="text-gray-400 hover:text-red-600 transition-colors">Пра фонд</a>
+                <div class="flex gap-4">
+                    <ul class="space-y-3 text-lg">
+                        <li><a href="/#about"
+                                class="js-nav-link text-gray-400 hover:text-red-600 flex items-center gap-1 px-2">
+                                Пра фонд
+                            </a>
                         </li>
-                        <li><a href="#history" class="text-gray-400 hover:text-red-600 transition-colors">Наша
-                                Гісторыя</a></li>
-                        <li><a href="#activities"
-                                class="text-gray-400 hover:text-red-600 transition-colors">Дзейнасць</a></li>
-                        <li><a href="#volunteers"
-                                class="text-gray-400 hover:text-red-600 transition-colors">Дабраахвотнікам</a></li>
-                        <li><a href="#partners" class="text-gray-400 hover:text-red-600 transition-colors">Партнёрам</a>
+                        <li><a href="/#news" data-i18n="nav.news"
+                                class="js-nav-link text-gray-400 hover:text-red-600 flex items-center gap-1 px-2">Навіны</a>
                         </li>
-                    </ul>
-                    <ul class="space-y-3 text-sm">
-                        <li><a href="#news" class="text-gray-400 hover:text-red-600 transition-colors">Навіны</a></li>
-                        <li><a href="#reports"
-                                class="text-gray-400 hover:text-red-600 transition-colors">Справаздачы</a></li>
-                        <li><a href="#historical-excursion"
-                                class="text-gray-400 hover:text-red-600 transition-colors">Гістарычны экскурс</a></li>
-                        <li><a href="/materials"
-                                class="text-gray-400 hover:text-red-600 transition-colors">Матэрыялы</a></li>
+                        <li><a href="/#partners"
+                                class="js-nav-link text-gray-400 hover:text-red-600 flex items-center gap-1 px-2">Партнёрам</a>
+                        </li>
+
+                        <li><a href="/#volunteers"
+                                class="js-nav-link text-gray-400 hover:text-red-600 flex items-center gap-1 px-2">Дапамога</a>
+                        </li>
+                        <li>
+                            <div class="pt-4">
+                                <a href="#donate" data-i18n="nav.support"
+                                    class="inline-flex items-center justify-center w-full bg-red-600 text-white py-4 px-4 font-black uppercase text-xs tracking-[0.2em] hover:bg-white hover:text-black transition-all">
+                                    Падтрымаць
+                                </a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
 
-                <div class="pt-4">
-                    <a href="#donate" data-i18n="nav.support"
-                        class="inline-flex items-center justify-center w-full bg-red-600 text-white py-4 font-black uppercase text-xs tracking-[0.2em] hover:bg-white hover:text-black transition-all">
-                        Падтрымаць
-                    </a>
-                </div>
+
             </div>
 
         </div>
