--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -51,8 +51,8 @@
         </a>
 
         <div class="flex items-center gap-4 md:gap-8">
-            <a href="#hero" id="home-link"
-                class="text-white hover:text-red-600 transition-all duration-300 opacity-0 translate-x-5 pointer-events-none">
+            <a href="/#hero" id="home-link"
+                class="js-nav-link **:text-white hover:text-red-600 transition-all duration-300 opacity-0 translate-x-5 pointer-events-none">
                 <i class="fa-solid fa-house text-xl md:text-2xl"></i>
             </a>
 
@@ -60,8 +60,8 @@
                 class=" hidden md:flex items-center space-x-10 uppercase text-[13px] font-black tracking-widest text-white">
                 <div class=" items-center gap-x-8 gap-y-0 grid grid-cols-2 xl:flex">
                     <div class="group relative py-4">
-                        <a href="#about"
-                            class="hover:text-red-600 transition-colors flex items-center gap-1 whitespace-nowrap">Пра
+                        <a href="/#about"
+                            class="js-nav-link hover:text-red-600 transition-colors flex items-center gap-1 whitespace-nowrap">Пра
                             фонд
                             <i
                                 class="fa-solid fa-chevron-down text-[8px] transition-transform group-hover:rotate-180"></i></a>
@@ -85,13 +85,14 @@
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Галерэя</a>
                         </div>
                     </div>
-                    <a href="#news" data-i18n="nav.news" class="hover:text-red-600 transition-colors">Навіны</a>
+                    <a href="/#news" data-i18n="nav.news"
+                        class="js-nav-link hover:text-red-600 transition-colors">Навіны</a>
                     <div class="group relative py-4">
-                        <a href="#partners" class="hover:text-red-600 flex items-center gap-1">Партнёрам <i
+                        <a href="/#partners" class="js-nav-link hover:text-red-600 flex items-center gap-1">Партнёрам <i
                                 class="fa-solid fa-chevron-down text-[8px] transition-transform group-hover:rotate-180"></i></a>
                         <div
                             class="absolute top-full left-0 w-64 bg-[#1a1a1a] border border-white/5 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200">
-                            <a href="/src/pages/full-partners.html"
+                            <a href="/src/pages/partners-full.html"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Нашы
                                 партнёры / Стаць
                                 партнёрам</a>
@@ -99,7 +100,8 @@
                     </div>
 
                     <div class="group relative py-4">
-                        <a href="#volunteers" class="hover:text-red-600 flex items-center gap-1">Дапамога <i
+                        <a href="/#volunteers" class="js-nav-link hover:text-red-600 flex items-center gap-1">Дапамога
+                            <i
                                 class="fa-solid fa-chevron-down text-[8px] transition-transform group-hover:rotate-180"></i></a>
                         <div
                             class="absolute top-full left-0 w-64 bg-[#1a1a1a] border border-white/5 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200">
@@ -113,8 +115,8 @@
                 </div>
 
 
-                <a href="#donate" data-i18n="nav.donate"
-                    class="bg-red-600 text-white px-8 py-2.5 hover:bg-white hover:text-black transition-all">Падтрымаць</a>
+                <a href="/#donate" data-i18n="nav.donate"
+                    class="js-nav-link bg-red-600 text-white px-8 py-2.5 hover:bg-white hover:text-black transition-all">Падтрымаць</a>
 
             </nav>
 
