--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -22,8 +22,8 @@
                     <div class="flex flex-col w-full items-start">
 
                         <div class="group relative py-2 w-full">
-                            <a href="#about"
-                                class="hover:text-red-600 px-2 py-2 transition-colors flex items-start gap-1 whitespace-nowrap">
+                            <a href="/#about"
+                                class="js-nav-link hover:text-red-600 px-2 py-2 transition-colors flex items-start gap-1 whitespace-nowrap">
                                 Пра фонд
                             </a>
                             <div class="static w-full bg-[#1a1a1a] border border-white/5 mt-1">
@@ -46,20 +46,22 @@
                             </div>
                         </div>
 
-                        <a href="#news" data-i18n="nav.news"
-                            class="hover:text-red-600 transition-colors py-3 px-2 w-full">Навіны</a>
+                        <a href="/#news" data-i18n="nav.news"
+                            class="js-nav-link hover:text-red-600 transition-colors py-3 px-2 w-full">Навіны</a>
 
                         <div class="group relative py-2 w-full">
-                            <a href="#partners" class="hover:text-red-600 flex items-center gap-1 px-2">Партнёрам</a>
+                            <a href="/#partners"
+                                class="js-nav-link hover:text-red-600 flex items-center gap-1 px-2">Партнёрам</a>
                             <div class="static w-full bg-[#1a1a1a] border border-white/5 mt-1">
-                                <a href="/src/pages/full-partners.html"
+                                <a href="/src/pages/partners-full.html"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600">Нашы
                                     партнёры / Стаць партнёрам</a>
                             </div>
                         </div>
 
                         <div class="group relative py-2 w-full">
-                            <a href="#volunteers" class="hover:text-red-600 flex items-center gap-1 px-2">Дапамога</a>
+                            <a href="/#volunteers"
+                                class="js-nav-link hover:text-red-600 flex items-center gap-1 px-2">Дапамога</a>
                             <div class="static w-full bg-[#1a1a1a] border border-white/5 mt-1">
                                 <a href="/pages/get-help.html"
                                     class="block px-2 py-2 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Атрымаць
@@ -70,8 +72,8 @@
                         </div>
 
                         <div class="w-full pt-6 pb-8 px-2">
-                            <a href="#donate" data-i18n="nav.donate"
-                                class="block w-full text-center bg-red-600 text-white py-4 hover:bg-white hover:text-black transition-all shadow-lg">
+                            <a href="/#donate" data-i18n="nav.donate"
+                                class="js-nav-link block w-full text-center bg-red-600 text-white py-4 hover:bg-white hover:text-black transition-all shadow-lg">
                                 Падтрымаць
                             </a>
                         </div>
